# weventful

./: Dockerfile  Makefile  Pipfile  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  database.py  main.py
app/student/: model.py
app/tests/: main_test.py
migrations/: env.py
