[project]
name = "weventful"
version = "0.0.1"
dependencies = []

[tool.black]
line-length = 88
target_version = ["py311"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.isort]
# Combines as imports on the same line.
combine-as-imports = true

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.per-file-ignores]
# Add ignores per-file here.
# Example: "asv_bench/*" = ["TID"]


[tool.setuptools]
py-modules = []